2008-05-08  vadim  <vadim@vk.crocodile.org>

	* FWWindowPrint.cpp (printFirewall): (from 2.1): fixed bug
	#1562726: "policy print rule cut-off". Long rulesets would not
	print correctly on Windows, the bottom of the ruleset table was
	just printed solid grey with no rules visible.

	* PolicyCompiler.cpp (PolicyCompiler::checkForShadowing): (from
	2.1): partial fix for bugs #1789059 "shadow issue when using
	action chain" and #1945149: "Shadowing test for rules with action
	"chain". The mechanism for rule shadowing detection we have at
	this time can only detect shadowing of one rule by another. In
	case of branching it is a combination of the branching rule and
	rules inside the branch that may shadow other rules.  I plan to
	redesign this part of the code in the future, but it won't happen
	in upcoming v3.

	Meanwhile, I am fixing it in 2.1 by making compiler ignore rules
	with action Branch.

2008-05-05  vadim  <vadim@vk.crocodile.org>

        * PolicyCompiler_pf_writers.cpp (PrintRule::processNext),
	RuleOptionsDialog.cpp (RuleOptionsDialog::loadFWObject): (from
	2.1) fixed bug #1821573: "Rule options limits allow for multiple
	overload tables". PF allows only for one "overload" option per
	rule.

        * IPTImporter.cpp (IPTImporter::pushPolicyRule), (from 2.1)
	iptables.g (target_options): fixed bug #1949438: "parser expects
	decimal - hex is not accepted". Importer for iptables should be
	able to process "--set-mark" with hex argument.

        * fwbedit.1: (from 2.1) fixed bug #1949103: "manpage slightly
	broken". Minor fixes in fwbedit.1 man page.

        * PolicyCompiler_PrintRule.cpp (PrintRule::_printOptionalGlobalRules):
        (from 2.1) fixed bug# 1940504: "Clamp MSS to MTU". Iptables
	command that invokes "-j TCPMSS --clamp-mss-to-pmtu" in FORWARD
	chain should go before the one that matches "--state
	ESTABLISHED,RELATED" in order to work for the packets in these
	states.

        * RuleOptionsDialog.cpp (RuleOptionsDialog::loadFWObject): (from